# shadowsocks-libev

./: README.md  configure.ac
doc/: CMakeLists.txt  ss-redir.asciidoc
docker/alpine/: README.md
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile.am  aead.c  common.h  crypto.c  dot.c  dot.h  jconf.c  jconf.h  metrics.c  metrics.h  netutils.c  netutils.h  plugin.c  plugin.h  probe.c  probe.h  redir.c  redir.h  shadowsocks.h  stream.c  udprelay.c  udprelay.h  utils.c  utils.h
